<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Unit8Weather">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/imageButton14"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_margin="15dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:contentDescription="@string/ogren"
                android:background="@drawable/exercise_1" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ogren"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/imageButton15"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_margin="15dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:contentDescription="@string/test_et"
                android:background="@drawable/exercise_2" />


            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/test_et"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/imageButton16"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_margin="15dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:contentDescription="@string/eslestir"
                android:background="@drawable/exercis_3" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/eslestir"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>